Brendan's comments samsim appendix

--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -13,7 +13,7 @@ To be completed.
 
  LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and spawner abundances percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of the Rapid Multidimensional Scanner Tool to Inside Southcoast Chum - Non Fraser. 
 
-At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. <!--BC:These sentences seem to contradict themselves. -->  These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the interior Fraser coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. <!--BC:These sentences seem to contradict themselves. -->  These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
 
 
 In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CU with low levels of synchrony that cannot be represented by proxy. In addition, small CUs are also difficult to represent by proxy, as the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite). 
@@ -44,7 +44,7 @@ We found that removing component CUs from assessments impacted the SMU-level sta
 For SMUs with component CUs that vary independently of each other, the inclusion of additional CU-level assessments will increase the likelihood of the proportion-based LRP being breached. For example, for the Inside South Coast Chum case study, when data-limited CUs were included in the derivation of proportion-based LRPs (i.e., CUs without percentile-based benchmarks), the proportion-based LRP was breached more often in historical analyses compared to when those CUs were excluded. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. Our results from this case study highlight the importance of including data from all CUs when CUs show high variability in status estimates. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review).
 
 
-For both proportion-based and aggregate-abundance based LRPs, we found that status assessments were sensitive to assumptions about the structural form of the underlying spawner-recruitment model used to estimate the lower benchmark, $S_{gen}$, and to considerations of different types of lower benchmarks, e.g., those reflecting distribution of spawners as considered in the Interior Fraser River coho case study. The decision on which structural form or type of benchmarks to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. This challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
+For both proportion-based and aggregate-abundance based LRPs, we found that status assessments were sensitive to assumptions about the structural form of the underlying spawner-recruitment model used to estimate the lower benchmark, $S_{gen}$, and to considerations of different types of lower benchmarks, e.g., those reflecting distribution of spawners as considered in the Interior Fraser River Coho case study. The decision on which structural form or type of benchmarks to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. This challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
 
 
 
@@ -60,12 +60,12 @@ Logistic regression-based LRPs are empirically derived from the past observation
 
 
 
-There are several disadvantages of the logistic regression-based LRPs. First, our implementation of logistic-regression LRPs relied on a single metric for CU assessments, such as $S_{gen}$ or the distributional target method applied to the Interior Fraser River coho study case study, which is not consistent with the recommendation to to apply the Rapid Multidimensional Scanner tool for CU assessments within proportion-based LRPs. We did not include CU assessments based on the multidimensional approach for logistic-regression based LRPs in part because those statuses include trend metrics which introduce autocorrelation into CU statuses, a violation of logistic regression model (see Section 2 for more  details). 
+There are several disadvantages of the logistic regression-based LRPs. First, our implementation of logistic-regression LRPs relied on a single metric for CU assessments, such as $S_{gen}$ or the distributional target method applied to the Interior Fraser Coho study case study, which is not consistent with the recommendation to to apply the Rapid Multidimensional Scanner tool for CU assessments within proportion-based LRPs. We did not include CU assessments based on the multidimensional approach for logistic-regression based LRPs in part because those statuses include trend metrics which introduce autocorrelation into CU statuses, a violation of logistic regression model (see Section 2 for more  details). 
 
 Second, logistic regression-based LRPs are only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. 
 <!-- KH: I wonder if this second point could be made more general to say that a limitation is that they are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were not years when all CUs or inlets were above their lower lower becnhmarks; howeever, it could equally apply to the opposite case where no CUs were observed to drop below their lower benchmark.  The dependence on hisorically observed conditions would also be a problem in there were changes in the synchrony of spawning abundances over time such that among-CU correlation changed over time. --> 
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated. For these SMUs, the aggregate abundances are not a significant indicator of individual CU statuses. Here, we found that logistic regression-based LRPs were estimable for interior Fraser coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Also, the wide rand in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs.
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated. For these SMUs, the aggregate abundances are not a significant indicator of individual CU statuses. Here, we found that logistic regression-based LRPs were estimable for interior Fraser Coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Also, the wide rand in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs.
 
 <!-- CH: I think this is the same concept as mentioned in the text above for SMU assessmetns in general.  Is there something different about missing data with logistic regression LRPs that we can highlight. Otherwise omit this pgh?-->Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data are missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis. The influence of missing data was also dependent on the status of the CU for which data was missing. The omission of a CU with red status will be more influential that omitting data for a CU with amber or green status <!--CH I think this comes down to if they covary or not, and more specifically if they meet the 4 criteria for reprsenativeness. WE don't actually know if they covary if they are data-limited or data-deficient, hence we have to rely on the criteria. --> because the red status would trigger the LRP and change the SMU status for the logistic regression, biasing the aggregate abundance LRP to lower values. 
 
@@ -80,9 +80,9 @@ CW Question: Why did we not apply the projection-based LRP to the Chum study cas
 
 -->
 
-The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirement for our implementation of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU, and covariance in dynamics among them. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)). 
+The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirement for our implementation of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU, and covariance in dynamics among them. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho study case, chapter \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)). 
 
-The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the interior Fraser coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
+The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the Interior Fraser Coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
 We also demonstrated that projection-based LRPs are sensitive to the assumed levels of exploitation in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability in stock-recruitment parameters among CUs increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
  
