--- a/caseStudyWP/11-appendix.Rmd
+++ b/caseStudyWP/11-appendix.Rmd
@@ -66,7 +66,7 @@ knitr::include_graphics("figure/sameProdhCor-SRHist.png")
 
 ```
 
-```{r chinook-ProjLRPs-SameProd, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\% (across 9 panels), assuming the same productivity for each inlet and trial and an SREP that varied across inlets and trials, drawn from a common disribution. Horizontal dashed lines at 50\\% and 66\\% represent equal and likely probabilities of all inlets being above lower benchmarks. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, but are indistinguishably here. ", fig.align="center"}
+```{r chinook-ProjLRPs-SameProd, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\% (across 9 panels), assuming the same productivity for each inlet and trial and an SREP that varied across inlets and trials, drawn from a common distribution. Horizontal dashed lines at 50\\% and 66\\% represent equal and likely probabilities of all inlets being above lower benchmarks. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, but are indistinguishably here. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/ERsSameProd-hCor-ProjLRPCurve-ALLp.png', './figure/ERsSameProd-hCor-ProjLRPCurve-ALLp.png', mode="wb")
 
@@ -92,7 +92,7 @@ knitr::include_graphics("figure/sameSREPhCor-SRHist.png")
 ```
 
 
-```{r chinook-ProjLRPs-SameSREP, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\% (across 9 panels), assuming the same SREP for each inlet and trial, and productivity that varied across inlets and trials, drawn from a common disribution. Horizontal dashed lines at 50\\% and 66\\% represent equal and likely probabilities of all inlets being above lower benchmarks. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, respectively. ", fig.align="center"}
+```{r chinook-ProjLRPs-SameSREP, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\% (across 9 panels), assuming the same SREP for each inlet and trial, and productivity that varied across inlets and trials, drawn from a common distribution. Horizontal dashed lines at 50\\% and 66\\% represent equal and likely probabilities of all inlets being above lower benchmarks. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, respectively. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/ERsSameSREP-hCor-ProjLRPCurve-ALLp.png', './figure/ERsSameSREP-hCor-ProjLRPCurve-ALLp.png', mode="wb")
 
