--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -80,4 +80,7 @@ old notes on time-varying parameters
 
 -->
 
-While the inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], than in LRPs, there may be value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2020 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By understanding serious harm from both indigenous and mainstream scientific perspectives, LRPs may better reflect underlying biological processes.
+
+The definition of serious harm which includes impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009], depends to some extent on the time-frame being considered. Assessments that include only very recent data may miss large declines in status and ecosystem impacts that occurred historically before the advent of modern survey records. In some cases, considering a longer view from genetic, archeological, paleoecological, or traditional knowledge demonstrates that recent declines are part of much larger historical declines associated with large-scale ecosystem impacts [@eckertDivingBackTime2018; @leeDiverseKnowledgeSystems2019; @priceGeneticsCenturyOld2019; @@mckechnieArchaeologicalDataProvide2014]. <!--OMIT, unless this pgh moved to intro: The inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management that identify long-term targets based on biological, social, and economic considerations [@caddyReferencePointsFisheries1995], than in LRPs. -->
+
+While the inclusion of traditional ecological knowledge is more commmon in the development of target reference points for fisheries management [@caddyReferencePointsFisheries1995], than in LRPs, there may be value in further considering its role in identifying serious harm. @reidTwoEyedSeeingIndigenous2020 introduce the concept of Two-Eyed Seeing (Etuaptmumk in Mi’kmaw), where both indigenous and western science perspectives are valued though the process of, “learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all”.  By understanding serious harm from both indigenous and mainstream scientific perspectives, LRPs may better reflect underlying biological processes understood through both knowledge systems.
